--- a/XXKit/UI/Camera/view/OSMOPhoneView_landscape.xib
+++ b/XXKit/UI/Camera/view/OSMOPhoneView_landscape.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -31,7 +31,10 @@
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="VK2-bd-rGj"/>
                             </constraints>
-                            <state key="normal" title="光圈"/>
+                            <state key="normal" title="滤镜"/>
+                            <connections>
+                                <action selector="selectFilter:" destination="iN0-l3-epB" eventType="touchUpInside" id="uHC-Ez-nlm"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q1a-P5-wea">
                             <rect key="frame" x="158.5" y="10" width="129" height="30"/>
