--- a/XXKit/UI/Camera/view/menu/cell/OSMOMenuCellBase.xib
+++ b/XXKit/UI/Camera/view/menu/cell/OSMOMenuCellBase.xib
@@ -22,22 +22,22 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="handleSettingArrow" translatesAutoresizingMaskIntoConstraints="NO" id="sfy-mv-ZXr">
                         <rect key="frame" x="387" y="17" width="8" height="13"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="13" id="MJz-IK-T5c"/>
-                            <constraint firstAttribute="width" constant="8" id="a4H-EC-2f8"/>
+                            <constraint firstAttribute="width" constant="8" id="L05-MK-8Ze"/>
+                            <constraint firstAttribute="height" constant="13" id="ox4-rH-AWR"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eO7-iV-mLW">
                         <rect key="frame" x="317" y="8" width="60" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="Qmh-Yp-zeC"/>
-                            <constraint firstAttribute="height" constant="30" id="hQW-fW-GZS"/>
+                            <constraint firstAttribute="height" constant="30" id="PUa-Ad-F2F"/>
+                            <constraint firstAttribute="width" constant="60" id="iQC-Hz-X7d"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tie-ri-jqm">
                         <rect key="frame" x="317" y="13" width="60" height="20.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20.5" id="2sd-Gg-5SP"/>
-                            <constraint firstAttribute="width" constant="60" id="sQJ-6d-IFY"/>
+                            <constraint firstAttribute="height" constant="20.5" id="8EU-bK-ORg"/>
+                            <constraint firstAttribute="width" constant="60" id="vWu-TV-XxS"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -46,8 +46,8 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="NwL-3g-Y6p">
                         <rect key="frame" x="15" y="13" width="264" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="264" id="5Wr-m5-TuK"/>
-                            <constraint firstAttribute="height" constant="20" id="rtf-k0-Z95"/>
+                            <constraint firstAttribute="height" constant="20" id="6OY-QO-uNb"/>
+                            <constraint firstAttribute="width" constant="264" id="9R2-24-M6M"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -56,8 +56,8 @@
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="DfF-RS-Lrn">
                         <rect key="frame" x="328" y="8" width="51" height="31"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="49" id="Gdo-79-CbY"/>
-                            <constraint firstAttribute="height" constant="31" id="bGi-NT-1q0"/>
+                            <constraint firstAttribute="height" constant="31" id="GcR-bz-9ax"/>
+                            <constraint firstAttribute="width" constant="49" id="HDG-gJ-2TH"/>
                         </constraints>
                         <connections>
                             <action selector="onSwitchValueChange:" destination="H7u-Ix-P1W" eventType="valueChanged" id="KWX-jU-pwr"/>
@@ -65,21 +65,16 @@
                     </switch>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="DfF-RS-Lrn" secondAttribute="bottom" constant="7.5" id="0PS-4k-XTa"/>
-                    <constraint firstItem="NwL-3g-Y6p" firstAttribute="top" secondItem="LCm-lH-zaf" secondAttribute="top" constant="13" id="18F-1y-jp3"/>
-                    <constraint firstItem="eO7-iV-mLW" firstAttribute="top" secondItem="LCm-lH-zaf" secondAttribute="top" constant="8" id="EhL-Q5-4Tr"/>
-                    <constraint firstAttribute="bottom" secondItem="eO7-iV-mLW" secondAttribute="bottom" constant="8.5" id="Gbw-kL-9qf"/>
-                    <constraint firstItem="sfy-mv-ZXr" firstAttribute="leading" secondItem="DfF-RS-Lrn" secondAttribute="trailing" constant="10" id="LWJ-nB-5WJ"/>
-                    <constraint firstItem="tie-ri-jqm" firstAttribute="top" secondItem="LCm-lH-zaf" secondAttribute="top" constant="13" id="Rn4-Jx-m8y"/>
-                    <constraint firstAttribute="trailing" secondItem="sfy-mv-ZXr" secondAttribute="trailing" constant="5" id="SDL-B6-GgV"/>
-                    <constraint firstItem="NwL-3g-Y6p" firstAttribute="leading" secondItem="LCm-lH-zaf" secondAttribute="leading" constant="15" id="Tu9-Cv-W4L"/>
-                    <constraint firstAttribute="bottom" secondItem="sfy-mv-ZXr" secondAttribute="bottom" constant="16.5" id="dhP-B2-s3l"/>
-                    <constraint firstItem="sfy-mv-ZXr" firstAttribute="leading" secondItem="eO7-iV-mLW" secondAttribute="trailing" constant="10" id="gV7-Tt-802"/>
-                    <constraint firstAttribute="bottom" secondItem="tie-ri-jqm" secondAttribute="bottom" constant="13" id="gnI-02-23C"/>
-                    <constraint firstItem="sfy-mv-ZXr" firstAttribute="leading" secondItem="tie-ri-jqm" secondAttribute="trailing" constant="10" id="iY1-8f-XsP"/>
-                    <constraint firstItem="DfF-RS-Lrn" firstAttribute="top" secondItem="LCm-lH-zaf" secondAttribute="top" constant="8" id="kmJ-0K-4Nf"/>
-                    <constraint firstItem="sfy-mv-ZXr" firstAttribute="top" secondItem="LCm-lH-zaf" secondAttribute="top" constant="17" id="w9k-Ge-ywm"/>
-                    <constraint firstAttribute="bottom" secondItem="NwL-3g-Y6p" secondAttribute="bottom" constant="13.5" id="wGy-2g-TAu"/>
+                    <constraint firstItem="sfy-mv-ZXr" firstAttribute="centerY" secondItem="LCm-lH-zaf" secondAttribute="centerY" id="2Ed-uH-Yhw"/>
+                    <constraint firstItem="sfy-mv-ZXr" firstAttribute="leading" secondItem="DfF-RS-Lrn" secondAttribute="trailing" constant="10" id="MKa-39-8jG"/>
+                    <constraint firstAttribute="trailing" secondItem="sfy-mv-ZXr" secondAttribute="trailing" constant="5" id="ObG-J9-ldu"/>
+                    <constraint firstItem="sfy-mv-ZXr" firstAttribute="leading" secondItem="tie-ri-jqm" secondAttribute="trailing" constant="10" id="Ogo-wZ-cZ0"/>
+                    <constraint firstItem="sfy-mv-ZXr" firstAttribute="leading" secondItem="eO7-iV-mLW" secondAttribute="trailing" constant="10" id="PeA-gN-S78"/>
+                    <constraint firstItem="eO7-iV-mLW" firstAttribute="centerY" secondItem="LCm-lH-zaf" secondAttribute="centerY" id="Uej-5f-IK9"/>
+                    <constraint firstItem="DfF-RS-Lrn" firstAttribute="centerY" secondItem="LCm-lH-zaf" secondAttribute="centerY" id="nWK-ya-TAP"/>
+                    <constraint firstItem="NwL-3g-Y6p" firstAttribute="leading" secondItem="LCm-lH-zaf" secondAttribute="leading" constant="15" id="rTk-Uu-izF"/>
+                    <constraint firstItem="NwL-3g-Y6p" firstAttribute="centerY" secondItem="LCm-lH-zaf" secondAttribute="centerY" id="v4l-HY-qPL"/>
+                    <constraint firstItem="tie-ri-jqm" firstAttribute="centerY" secondItem="LCm-lH-zaf" secondAttribute="centerY" id="zpr-Xr-Ryb"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
